# StephanTaylor

nimbuzyn_project/nimbuzyn/: AndroidManifest.xml  Cargo.toml  README.md  build_apk.bat  build_apk.sh  generate_icons.py
nimbuzyn_project/nimbuzyn/res/values/: strings.xml  styles.xml
nimbuzyn_project/nimbuzyn/src/: app.rs  lib.rs  main.rs  theme.rs
nimbuzyn_project/nimbuzyn/src/db/: mod.rs
nimbuzyn_project/nimbuzyn/src/models/: mod.rs
nimbuzyn_project/nimbuzyn/src/screens/: chat.rs  inventory.rs  login.rs  mod.rs  settings.rs  splash.rs
